Complete UI rebrand: Update all user-facing BlockTube references
- Update options page title and logo to TunTun Extension
- Update options page header links to TunTun repo
- Update import error message to TunTun Extension
- Update toast notifications to TunTun Extension (4 instances)
- Update console.info initialization message
- Update extension icon tooltip to TunTun Extension Options
- Update Firefox manifests: name, description, and tooltip

All user-visible text now shows TunTun Extension branding.
Completes Phase 2 of rebrand following v1.0.0 release (4d9f187)

--- a/platform/firefox/manifest.json
+++ b/platform/firefox/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "BlockTube",
+  "name": "TunTun Extension",
   "version": "{EXT_VERSION}",
-  "description": "YouTube™ content blocker",
+  "description": "Safe YouTube browsing for your family. Block unwanted videos, channels, and content with powerful parental controls.",
   "manifest_version": 3,
   "content_scripts": [
     {
@@ -26,7 +26,7 @@
     }
   ],
   "action": {
-    "default_title": "BlockTube Options",
+    "default_title": "TunTun Extension Options",
     "default_popup": "src/popup/popup.html",
     "default_icon": {
       "16": "assets/icons/16.png",
