--- a/platform/chrome/manifest.json
+++ b/platform/chrome/manifest.json
@@ -26,7 +26,7 @@
     }
   ],
   "action": {
-    "default_title": "BlockTube Options",
+    "default_title": "TunTun Extension Options",
     "default_popup": "src/popup/popup.html",
     "default_icon": {
       "16": "assets/icons/16.png",
